gitops-engine/pkg/health/testdata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  creationTimestamp: 2018-09-20T06:47:27Z
  generation: 9
  name: argocd-server-ingress
  namespace: argocd
  resourceVersion: "23207680"
  selfLink: /apis/networking.k8s.io/v1/namespaces/argocd/ingresses/argocd-server-ingress
  uid: 09927cae-bca1-11e8-bbd2-42010a8a00bb
spec:
  rules:
  - host: example.argoproj.io
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
status:
  loadBalancer:
    ingress:
    - ip: 1.2.3.4
